webapps/test/v1/WEB-INF/jsp/error/400.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>400 Bad Request</title>
</head>
<body>
	<div class="error-container">
		<h1>400 Bad Request</h1>
		<p>The request could not be understood by the server due to malformed syntax.</p>
	</div>
</body>
</html>